erDiagram
    USUARIOS ||--o| PERFILES : "tiene (1:1)"
    USUARIOS ||--o{ CORREOS_AUTORIZADOS : autoriza
    USUARIOS ||--o{ AUDITORIA_LOGS : "genera evento"

    PERFILES ||--o{ PERFIL_HABILIDAD : declara
    HABILIDADES ||--o{ PERFIL_HABILIDAD : "es declarada en"
    PERFILES ||--o{ PERFIL_HABILIDAD : "valida (RM)"

    PERFILES ||--o{ PROYECTOS : "crea (PM)"
    PROYECTOS ||--o{ PROYECTO_HABILIDAD_REQUERIDA : exige
    HABILIDADES ||--o{ PROYECTO_HABILIDAD_REQUERIDA : "es exigida en"

    PROYECTOS ||--o{ ASIGNACIONES : contiene
    PERFILES ||--o{ ASIGNACIONES : ocupa
    ASIGNACIONES ||--o{ EXCEPCIONES_CARGA : "puede tener"
    PERFILES ||--o{ EXCEPCIONES_CARGA : "solicita / aprueba"

    PROYECTOS ||--o{ FORO_PUBLICACIONES : contiene
    PERFILES ||--o{ FORO_PUBLICACIONES : publica
    FORO_PUBLICACIONES ||--o{ FORO_PUBLICACIONES : responde
    FORO_PUBLICACIONES ||--o| RESUMENES_IA : "tiene resumen"

    PROYECTOS ||--o{ CHAT_SALAS : tiene
    CHAT_SALAS ||--o{ CHAT_MENSAJES : recibe
    PERFILES ||--o{ CHAT_MENSAJES : escribe

    PERFILES ||--o{ NOTIFICACIONES : recibe
    PERFILES ||--o{ PREFERENCIAS_NOTIFICACION : configura
    PERFILES ||--o{ CONFIGURACION_GLOBAL : actualiza

    PROYECTOS ||--o{ RECOMENDACIONES_IA_LOG : "recibe candidatos para"
    PERFILES ||--o{ RECOMENDACIONES_IA_LOG : "es candidato / solicita"

    USUARIOS {
        bigint id PK
        varchar correo UK
        varchar contrasena_hash
        enum rol_organizacional "NULL en la mayoria; administrador/resource_manager"
        enum estado "activo/inactivo"
    }
    CORREOS_AUTORIZADOS {
        bigint id PK
        varchar correo UK
        bigint autorizado_por_id FK
        enum origen_carga
        boolean utilizado
    }
    PERFILES {
        bigint id PK
        bigint usuario_id FK "UK, 1 a 1"
        varchar nombre_completo
        varchar cargo
        tinyint disponibilidad_porcentaje
        tinyint experiencia_anios
        enum estado
    }
    HABILIDADES {
        bigint id PK
        varchar nombre UK
        varchar categoria "texto libre"
    }
    PERFIL_HABILIDAD {
        bigint perfil_id PK_FK
        bigint habilidad_id PK_FK
        tinyint nivel "1 a 5"
        bigint validado_por_id FK
    }
    PROYECTOS {
        bigint id PK
        varchar nombre
        json tecnologias
        enum estado "planificacion/activo/en_pausa/completado/cancelado"
        bigint creado_por_id FK "el PM"
        date fecha_inicio
        date fecha_fin_estimada
    }
    PROYECTO_HABILIDAD_REQUERIDA {
        bigint proyecto_id PK_FK
        bigint habilidad_id PK_FK
        tinyint nivel_requerido
    }
    ASIGNACIONES {
        bigint id PK
        bigint proyecto_id FK
        bigint perfil_id FK
        enum rol_en_proyecto "project_manager/colaborador"
        tinyint carga_porcentaje
        enum estado "activa/finalizada/cancelada"
        varchar clave_activa "generada; UNIQUE solo si activa"
    }
    EXCEPCIONES_CARGA {
        bigint id PK
        bigint asignacion_id FK
        bigint solicitado_por_id FK
        bigint aprobado_por_id FK
        tinyint porcentaje_aprobado
        enum estado
    }
    FORO_PUBLICACIONES {
        bigint id PK
        bigint proyecto_id FK
        bigint autor_id FK
        bigint publicacion_padre_id FK "NULL = hilo raiz"
        varchar titulo
        text contenido
        json etiquetas
        boolean es_solucion
        int num_vistas
    }
    RESUMENES_IA {
        bigint id PK
        bigint publicacion_id FK "unico, 1 por hilo"
        text resumen
        varchar modelo_utilizado
    }
    CHAT_SALAS {
        bigint id PK
        bigint proyecto_id FK
        varchar nombre
    }
    CHAT_MENSAJES {
        bigint id PK
        bigint sala_id FK
        bigint autor_id FK
        text contenido
    }
    NOTIFICACIONES {
        bigint id PK
        bigint perfil_id FK
        enum tipo
        varchar titulo
        boolean leida
        enum canal
    }
    PREFERENCIAS_NOTIFICACION {
        bigint id PK
        bigint perfil_id FK
        enum tipo_evento
        enum canal
    }
    AUDITORIA_LOGS {
        bigint id PK
        bigint usuario_id FK "apunta a usuarios, no perfiles"
        varchar accion
        varchar entidad_afectada
        bigint entidad_id "sin FK real"
    }
    CONFIGURACION_GLOBAL {
        varchar clave PK
        varchar valor
        bigint actualizado_por_id FK
    }
    CONOCIMIENTO_EMBEDDINGS {
        bigint id PK
        enum tipo_origen
        bigint referencia_id "sin FK real"
        text contenido_indexado
        json vector_embedding
    }
    RECOMENDACIONES_IA_LOG {
        bigint id PK
        bigint proyecto_id FK
        bigint perfil_recomendado_id FK
        bigint solicitado_por_id FK
        decimal puntaje_compatibilidad
        text explicacion
        boolean fue_asignado
    }
